calendar z-index fix + calendar close js add

--- a/src/css/base/_layout.scss
+++ b/src/css/base/_layout.scss
@@ -108,7 +108,7 @@ button::-moz-focus-inner {
   display: flex;
   justify-content: center;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   &
     >
